--- a/styles/main.css
+++ b/styles/main.css
@@ -59,3 +59,9 @@ textarea {
     max-width: 700px;
     /*border: 1px solid red;*/
 }
+
+@media (min-width: 700px) {
+    :root{
+        font-size: 62.5%; /*todo 1rem vai ser relativo a 10px*/
+    }
+}
