--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -53,7 +53,7 @@
        </header>
 
        <main>
-            <form action="" id="create-class">
+            <form action="/save-classes" id="create-class" method="POST">
                 <fieldset>
                     <legend>seus dados</legend>
 
